2014-06-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c (event_reset) src/qtterminal/QtGnuplotWindow.{h|cpp}:
	Window close events from qt were not being passed through to the main
	program, so "pause mouse close" did not work. Also a backgrounded 
	instance could hang rather than exit when the last plot window closed.
	Bug #1418

2014-06-11  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>

	* term/aquaterm.trm:  Correctly support encoding CP1252.

2014-06-11  Tatsuro MATSUOKA <tmacchant3@yahoo.co.jp>

	* win/gnuplot.iss:  Include Qt platform DLLs in distribution package.

2014-06-10  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc:  Add a section explaining the "persist" option.
	Bug #1418, #1419

	* term/post.trm term/svg.trm src/qtterminal/qt_term.cpp:
	Add an empirical scale factor to the dashlength*linewidth computation to
	make the resulting patterns closer in total size to the built-in ones.

2014-06-10  Christoph Bersch <usenet@bersch.net>

	* term/post.trm term/svg.trm:  Scale dashlength with linewidth.

2014-06-09  Daniel J Sebald <daniel.sebald@ieee.org>

	* src/qtterminal/QtGnuplotWidget.cpp (processEvent):  Always "resize"
	the initial plot to its own size.  This may work around strangeness on
	some systems that create the initial qt plot window with the wrong size.
	Bug #1417 (forwarded from Debian) Patch #661

2014-06-09  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgdiplus.cpp src/win/wgraph.c src/win/wgnuplib.h
	term/win.trm:
	Version 5 dashtypes. Custom dashtypes supported by GDI+ driver.

	* src/wxterminal/wxt_gui.cpp:  Also "restore" the window state on
	"raise".
	Bug #1389

	* src/win/winmain.c (WinMain):  Change type from PASCAL to CALLBACK.

	* src/fit.c:  Test if covariance matrix is available before saving
	it to user variables.

2014-06-08  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc win/README-Windows.txt win/README-ja.txt
	docs/gnuplot-ja.doc:  sync to docs version 1.891
